--- a/client/package.json
+++ b/client/package.json
@@ -11,15 +11,19 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.4.0",
+    "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-query": "^5.36.2",
     "@tanstack/react-query-devtools": "^5.36.2",
     "axios": "^1.6.8",
     "daisyui": "^4.11.1",
+    "framer-motion": "^11.2.4",
     "nanoid": "^5.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "yup": "^1.4.0"
   },
