--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.8",
     "daisyui": "^4.11.1",
     "framer-motion": "^11.2.4",
+    "jwt-decode": "^4.0.0",
     "nanoid": "^5.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
